# app/Http/Resources/BorrowerResource.php
@@ -29,6 +29,11 @@ class BorrowerResource extends JsonResource
             'email' => $this->email,
             'employer_or_business' => $this->employer_or_business,
             'monthly_income' => $this->monthly_income !== null ? (float) $this->monthly_income : null,
+            'spouse_first_name' => $this->spouse_first_name,
+            'spouse_middle_name' => $this->spouse_middle_name,
+            'spouse_last_name' => $this->spouse_last_name,
+            'spouse_contact_number' => $this->spouse_contact_number,
+            'spouse_occupation' => $this->spouse_occupation,
             'photo_url' => $photoUrl,
             'photo' => $photoUrl,
             'status' => $this->status,
