# app/Models/Borrower.php
@@ -28,6 +28,11 @@ class Borrower extends Model
         'email',
         'employer_or_business',
         'monthly_income',
+        'spouse_first_name',
+        'spouse_middle_name',
+        'spouse_last_name',
+        'spouse_contact_number',
+        'spouse_occupation',
         'photo_path',
         'branch_id',
         'status',
